# cmake_demo

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt  main.cpp  main.h
src/module1/: CMakeLists.txt  module1.cpp  module1.h
src/module2/: CMakeLists.txt  module2.cpp  module2.h
src/module3/: CMakeLists.txt  module3.cpp  module3.h
